src/styl/end-screen.styl
@import "vars.styl";
@import "components.styl";
@import "gdpr-pop-up.styl";
@import "square-end-screen.styl";

// We have new media queries with custom font sizes for the endscreen so we need to use 'em' unit
$endscreen-default-size = unit($default-px-size/ 16, "em");

$end-screen-mixin($scale-size = $default-scale-size) {

  #end-screen {
    .btn-close-region {
      $close-button-default($scale-size);
      padding: $scale-size * $default-size * .25;
    }

    .china-advertisement {
      $china-overlay($default-scale-size);
      position: absolute;
      right: 0;
      bottom: 0;
      padding: 0;
      color: $gray;
      font-size: $endscreen-default-size * .60;
      opacity: .6;
    }

    .download-container {
      margin: .75 * $default-scale-size * $scale-size auto 0 auto;
      padding: $endscreen-default-size * .6 0;
      width: $endscreen-default-size * 11.2;
      border-radius: $endscreen-default-size * .6;
      background: $blue;
      color: $white;
      text-align: center;
      font-size: $endscreen-default-size;
    }

    .game-rating {
      $game-rating-default($scale-size);
      margin-top: .41 * $endscreen-default-size;
      letter-spacing: 0;
      font-size: .8 * $endscreen-default-size;
    }

    .game-rating-stars-top {
      $game-rating-mask-default($scale-size);
      position: absolute;
      left: 0;
      z-index: 1;
    }

    .game-rating-stars-bottom {
      z-index: 0;
    }

    .game-rating-count {
      $game-rating-count-default($scale-size);
      font-size: .5 * $endscreen-default-size;
    }

    .game-icon {
      margin-bottom: .8 * $endscreen-default-size;
      min-width: 3.5 * $endscreen-default-size;
      min-height: 3.5 * $endscreen-default-size;
      width: 3.5 * $endscreen-default-size;
      height: 3.5 * $endscreen-default-size;
      border-radius: .4 * $endscreen-default-size;
      background-position: center;
      background-size: cover;
      background-repeat: no-repeat;
    }

    .icon-star {
      margin-left: -.25 * $endscreen-default-size;
    }

    .first-icon-star {
      margin-left: 0;
    }

    .icon-star:before {
      font-size: .8 * $endscreen-default-size;
    }

    .unityads-logo {
      $unityads-logo-default($scale-size);
      max-height: 1 * $endscreen-default-size;
      font-size: .7 * $endscreen-default-size;
      opacity: .6;
    }

    .name-container {
      $name-container-default($scale-size);
      max-width: 85%;
      color: $end-screen-game-name-color;
      text-align: center;
      font-size: 1 * $endscreen-default-size;
    }

    .bottom-container {
      position: absolute;
      bottom: 0;
      left: 0;
      margin: 0 .5  * $endscreen-default-size .25 * $endscreen-default-size  .5 * $endscreen-default-size;
      width: calc(100% - 1em);
    }

    .privacy-button {
      $privacy-button-default($scale-size);
      left: 0;
    }

    .icon-gdpr {
      color: $black;
      opacity: .25;
    }

    &.show-gdpr-banner .gdpr-pop-up {
      $gdpr-pop-up($scale-size);
    }

    &:not(.show-gdpr-banner) {
      .gdpr-pop-up {
        display: none;
      }
    }

    .game-background-container {
      position: relative;
      width: 100%;
      height: 50%;
    }

    .game-background {
      width: 100%;
      height: 100%;
    }

    .column-container {
      display: flex;
      flex: 1;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      margin-bottom: $endscreen-default-size * .85;
    }
  }

  body {
    &.portrait #end-screen {
      .download-container {
        margin: 1 * $endscreen-default-size auto 0 auto;
      }
    }

    &.landscape #end-screen {
      .btn-close-region {
        color: $gray;
      }

      .end-screen-info {
        .download-container  {
          margin: 1 * $endscreen-default-size auto 0 auto;
        }

        .game-icon {
          margin-bottom: .8 * $endscreen-default-size;
        }
      }
    }

    #end-screen {
      .store-container {
        margin-top: 0;
      }

      .row-container {
        bottom: $endscreen-default-size;
      }
    }

    &.ios {
      #end-screen .end-screen-info {
        .game-icon {
          border-radius: .8 * $endscreen-default-size;
        }

        .download-container {
          border-radius: .6 * $endscreen-default-size;
        }
      }
    }

    &.landscape #end-screen {
      .end-screen-info {
        .download-container  {
          margin: 1 * $endscreen-default-size auto 0 auto;
        }
      }
    }
  }
}

body {
  &.portrait #end-screen {
    .game-background-portrait {
      display: block;
    }
    .game-background-landscape {
      display: none;
    }

    .row-container {
      display: flex;
      flex-direction: row;
      justify-content: center;
    }

    .end-screen-info-background {
      width: 100%;
      height: 50%;
    }

    .game-icon {
      align-self: center;
    }
    
    .game-background {
      background-color: $end-screen-gray-border;
    }
  }

  &.landscape #end-screen {
    .game-background-container {
      width: 50%;
      height: 100%;
    }

    .game-background-portrait {
      display: none;
    }
    .game-background-landscape {
      display: block;
    }

    .end-screen-info {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;

      .game-icon {
        margin: 0 auto;
      }

    }

    .campaign-container {
      display: flex;
    }

    .end-screen-info-background {
      width: 50%;
      height: 100%;
      text-align: center;
    }

    .gdpr-pop-up {
      left: 0;
    }
  }

  .row-container {
    position: relative;
  }
}

#end-screen {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: transparent;

  .campaign-container {
    width: 100%;
    height: 100%;
    background: $white;
  }

  .game-background {
    background-color: $black;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
  }

  &.show-gdpr-banner {
    .privacy-button {
      display: none;
    }
  }

  .end-screen-info-background {
    position: relative;
    display: flex;
    flex: 1;
    flex-direction: column;
    align-items: center;
    align-content: center;
    height: 100%;
    justify-content: center;
    background-color: $end-screen-background-color;

    @media (orientation: portrait) {
      @media (min-height: 0) {
        font-size: $default-px-size * .4;
      }

      @media (min-height: 250px) {
        font-size: $default-px-size * .5;
      }

      @media (min-height: 320px) {
        font-size: $default-px-size * .7;
      }

      @media (min-height: 380px) {
        font-size: $default-px-size * .8;
      }

      @media (min-height: 460px) {
        font-size: $default-px-size * 1;
      }

      @media (min-height: 560px) {
        font-size: $default-px-size * 1.2;
      }

      @media (min-height: 600px) {
        font-size: $default-px-size * 1.3;
      }

      @media (min-height: 680px) {
        font-size: $default-px-size * 1.5;
      }

      @media (min-height: 780px) {
        font-size: $default-px-size * 1.6;
      }

      @media (min-height: 980px) {
        font-size: $default-px-size * 1.8;
      }

      @media (min-height: 1050px) {
        font-size: $default-px-size * 2.2;
      }

      @media (min-height: 1175px) {
        font-size: $default-px-size * 2.5;
      }

      @media (min-height: 1375px) {
          font-size: $default-px-size * 3;
      }

      @media (min-height: 1675px) {
        font-size: $default-px-size * 3.5;
      }

      @media (min-height: 1975px) {
        font-size: $default-px-size * 4.4;
      }

      @media (min-height: 2275px) {
        font-size: $default-px-size * 5;
      }

      @media (min-height: 2575px) {
        font-size: $default-px-size * 6;
      }

      @media (min-height: 2875px) {
        font-size: $default-px-size * 7;
      }

      @media (min-height: 3475px) {
        font-size: $default-px-size * 8;
      }
    }

    @media (orientation: landscape) {
      @media (min-width: 200px) {
        font-size: $default-px-size * .7;
      }

      @media (min-width: 320px) {
        font-size: $default-px-size * .8;
      }

      @media (min-width: 460px) {
        font-size: $default-px-size * 1;
      }

      @media (min-width: 580px) {
        font-size: $default-px-size * 1.2;
      }

      @media (min-width: 760px) {
        font-size: $default-px-size * 1.4;
      }

      @media (min-width: 960px) {
        font-size: $default-px-size * 1.6;
      }

      @media (min-width: 1160px) {
          font-size: $default-px-size * 2.2;
      }

      @media (min-width: 1460px) {
        font-size: $default-px-size * 2.8;
      }

      @media (min-width: 1760px) {
        font-size: $default-px-size * 3.8;
      }

      @media (min-width: 2260px) {
        font-size: $default-px-size * 4.6;
      }
    }
  }
}

$end-screen-mixin();

